# 2026-ei-aoopii-a24

./: .env.example  .gitignore  README.md  pyproject.toml
config/: branding.json
docs/: OPENCLAW.md
examples/: sample_input.txt
src/content_pipeline/: __init__.py  __main__.py  agent.py  config.py  env.py  memory.py  models.py  telegram_bot.py
src/content_pipeline/tools/: __init__.py  content_tools.py  document_tools.py  image_tools.py  input_tools.py  llm_provider.py  translation_tools.py
tests/: test_content_pipeline.py
