[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-content-pipeline"
version = "0.1.0"
description = "Academic AI agent demo that transforms one input into branded multi-platform content."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Joao Barbosa" },
  { name = "Pedro Sousa" }
]
dependencies = [
  "certifi>=2024.2.2",
  "python-telegram-bot>=22,<23"
]

[project.scripts]
content-pipeline = "content_pipeline.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
